@@ -5,20 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.4</version>
-        <relativePath/>
+        <groupId>br.ipt</groupId>
+        <artifactId>teclado-helena</artifactId>
+        <version>0.0.1</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <groupId>br.ipt</groupId>
-    <artifactId>teclado-helena</artifactId>
-    <version>0.0.1</version>
+    <artifactId>teclado-helena-server</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
-        <java.source.version>21</java.source.version>
-        <java.target.version>21</java.target.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.name>THL</project.name>
         <project.jpackage.directory>${project.basedir}/jpackage</project.jpackage.directory>
         <project.build.dist.directory>${project.build.directory}/dist</project.build.dist.directory>
@@ -57,15 +53,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
